@@ -1,3 +1,15 @@
+2011-10-26  Anders Carlsson  <andersca@apple.com>
+
+        Use the right contents scale factor for non-Mac plug-ins
+        https://bugs.webkit.org/show_bug.cgi?id=70939
+
+        Reviewed by Adam Roben.
+
+        * WebProcess/Plugins/PluginProxy.cpp:
+        (WebKit::PluginProxy::paint):
+        (WebKit::PluginProxy::geometryDidChange):
+        (WebKit::PluginProxy::update):
+
 2011-10-26  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Add missing symbols to WebKit2 gtk-doc files
